added encryption and data recovery with AES GCM and integrity checks with HMAC