@@ -12,14 +12,13 @@ import ukim.finki.file_vault.model.exception.UserFileNotFoundException;
 import ukim.finki.file_vault.model.exception.UserNotFoundInSessionException;
 import ukim.finki.file_vault.repository.UserFileRepository;
 import ukim.finki.file_vault.repository.UserRepository;
+import ukim.finki.file_vault.service.CryptoUtils;
 import ukim.finki.file_vault.service.SecurityUtils;
 import ukim.finki.file_vault.service.UserFileService;
 import java.io.FileNotFoundException;
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.nio.file.StandardCopyOption;
+import java.nio.file.*;
+import java.util.Base64;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.regex.Matcher;
@@ -30,26 +29,45 @@ public class UserFileServiceImp implements UserFileService {
     private final UserRepository userRepository;
     private final UserFileRepository userFileRepository;
     private final static Pattern FILE_PATTERN = Pattern.compile("^[a-zA-Z0-9][^\\\\/:*?\"<>|]*\\.[a-zA-Z0-9]{1,5}$");
+    private final CryptoUtils cryptoUtils;
+
     @Value("${file.storage.base-path}")
     private String basePath;
 
-    public UserFileServiceImp(UserRepository userRepository,  UserFileRepository userFileRepository) {
+    @Value("${file.storage.backup-path}")
+    private String backupPath;
+
+    public UserFileServiceImp(UserRepository userRepository,
+                              UserFileRepository userFileRepository,
+                              @Value("${AES_MASTER_KEY_BASE64}") String aesKey,
+                              @Value("${HMAC_SECRET_BASE64}") String hmacKey) {
+
         this.userRepository = userRepository;
         this.userFileRepository = userFileRepository;
+        this.cryptoUtils = new CryptoUtils(aesKey, hmacKey);
     }
 
     @Override
     @Transactional
-    public void uploadFile(MultipartFile file, String fileName) throws IOException, FileNameAlreadyExistsException, IllegalFileNameException {
-        saveFileToDatabase(file, fileName);
-
+    public void uploadFile(MultipartFile file, String fileName) throws Exception {
+        byte[] IV = cryptoUtils.generateIV();
         byte[] fileBytes = file.getBytes();
+        byte[] encrypted = cryptoUtils.encrypt(fileBytes, IV);
+        byte[] hmac = cryptoUtils.calculateHmac(encrypted);
+
+        saveFileToDatabase(file, fileName, IV, hmac);
+
         User currentUser = SecurityUtils.getCurrentUser();
         assert currentUser != null;
         String fullPath =  basePath + "/" + currentUser.getUsername() + "/" + fileName;
-        Path filePath = Paths.get(fullPath);
-        Files.createDirectories(filePath.getParent());
-        Files.write(filePath, fileBytes);
+        String fullBackupPath = backupPath + "/" + currentUser.getUsername() + "/" + fileName;
+
+        Path filePathMain = Paths.get(fullPath);
+        Path filePathBackup = Paths.get(fullBackupPath);
+        Files.createDirectories(filePathMain.getParent());
+        Files.createDirectories(filePathBackup.getParent());
+        Files.write(filePathMain, encrypted);
+        Files.write(filePathBackup, encrypted);
     }
 
     @Override
@@ -77,6 +95,7 @@ public class UserFileServiceImp implements UserFileService {
 
         User currentUser = userRepository
                 .findById(Objects.requireNonNull(SecurityUtils.getCurrentUser()).getID()).orElseThrow(UserNotFoundInSessionException::new);
+
         String newPathString = basePath + "/" + currentUser.getUsername() + "/" + newFileName;
         Path newFilePath = Paths.get(newPathString);
         Files.move(Paths.get(file.getFilePath()), newFilePath, StandardCopyOption.REPLACE_EXISTING);
@@ -94,10 +113,35 @@ public class UserFileServiceImp implements UserFileService {
         file.setUsersWithAccess(null);
         userFileRepository.delete(file);
 
-        Files.delete(Path.of(file.getFilePath()));
+        Files.deleteIfExists(Path.of(file.getFilePath()));
+        Files.deleteIfExists(Paths.get(file.getBackupPath()));
     }
 
-    private void saveFileToDatabase(MultipartFile file, String fileName) throws FileNameAlreadyExistsException, IllegalFileNameException {
+    @Override
+    public byte[] safeReadFile(Path main, Path backup, UserFile userFile) throws Exception {
+        byte[] iv = Base64.getDecoder().decode(userFile.getIvBase64());
+        byte[] expectedHmac = Base64.getDecoder().decode(userFile.getHmacBase64());
+
+        if(Files.exists(main)) {
+            byte[] mainData = Files.readAllBytes(main);
+            if(cryptoUtils.verifyMac(mainData, expectedHmac)) {
+                return cryptoUtils.decrypt(mainData, iv);
+            }
+        }
+        if (Files.exists(backup)) {
+            byte[] backupData = Files.readAllBytes(backup);
+            if(cryptoUtils.verifyMac(backupData, expectedHmac)) {
+                Files.write(Path.of(userFile.getFilePath()), backupData);
+                return cryptoUtils.decrypt(backupData, iv);
+            }
+        }
+        deleteFileByID(userFile.getId());
+        Files.deleteIfExists(main);
+        Files.deleteIfExists(backup);
+        throw new FileNotFoundException("The file was tampered with and removed for safety.");
+    }
+
+    private void saveFileToDatabase(MultipartFile file, String fileName, byte[] IV, byte[] hmac) throws FileNameAlreadyExistsException, IllegalFileNameException {
         checkFileNameAvailability(fileName);
         checkFileNameLegality(fileName);
 
@@ -112,9 +156,12 @@ public class UserFileServiceImp implements UserFileService {
         UserFile userFile = new UserFile();
         userFile.setFileName(fileName);
         userFile.setFilePath(basePath + "/" + currentUser.getUsername() + "/" + fileName);
+        userFile.setBackupPath(backupPath + "/" + currentUser.getUsername() + "/" + fileName);
         userFile.setOwnerID(currentUser.getID());
         userFile.setContentType(file.getContentType());
         userFile.setSize(file.getSize());
+        userFile.setHmacBase64(Base64.getEncoder().encodeToString(hmac));
+        userFile.setIvBase64(Base64.getEncoder().encodeToString(IV));
         userFile.getUsersWithAccess().add(currentUser);
         currentUser.getFiles().add(userFile);
         userRepository.save(currentUser);
